objects/Astonous_SM__Shipping_Preference__c.object
<CustomObject>
    <fields>
        <fullName>Astonous_SM__Building_Location__c</fullName>
        <inlineHelpText>Required for pickup request, selected option will be default while creating new pickup request.</inlineHelpText>
        <label>Building Location</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Astonous_SM__Default_Carrier__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FRONT</fullName>
                </value>
                <value>
                    <fullName>REAR</fullName>
                </value>
                <value>
                    <fullName>SIDE</fullName>
                </value>
                <value>
                    <fullName>Front Door</fullName>
                </value>
                <value>
                    <fullName>Back Door</fullName>
                </value>
                <value>
                    <fullName>Side Door</fullName>
                </value>
                <value>
                    <fullName>Knock on Door/Ring Bell</fullName>
                </value>
                <value>
                    <fullName>Mail Room</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                </value>
                <value>
                    <fullName>Reception</fullName>
                </value>
                <value>
                    <fullName>In/At Mailbox</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Astonous_SM__Building_Type__c</fullName>
        <inlineHelpText>Required for pickup request,Selected option default while creating pickup request.</inlineHelpText>
        <label>Building Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>APARTMENT</fullName>
                </value>
                <value>
                    <fullName>BUILDING</fullName>
                </value>
                <value>
                    <fullName>DEPARTMENT</fullName>
                </value>
                <value>
                    <fullName>SUITE</fullName>
                </value>
                <value>
                    <fullName>FLOOR</fullName>
                </value>
                <value>
                    <fullName>ROOM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Astonous_SM__City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Company_Close_Time__c</fullName>
        <inlineHelpText>Required for Pickup Request, selected option will be default while creating new Pickup request.</inlineHelpText>
        <label>Company Close Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Contact_Person_Name__c</fullName>
        <label>Contact Person Name</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Country__c</fullName>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Default_Carrier__c</fullName>
        <label>Default carrier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Astonous_SM__Shipping_Carrier</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Astonous_SM__Default_Currency__c</fullName>
        <label>Default Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>USD</fullName>
                    <default>true</default>
                    <label>USD</label>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>INR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Astonous_SM__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Email__c</fullName>
        <inlineHelpText>Default Sender Email address</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Is_it_Residential_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is it Residential Address ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Label_Format_Type__c</fullName>
        <label>Label Format Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Astonous_SM__Default_Carrier__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>COMMON2D</fullName>
                    <default>true</default>
                    <label>COMMON2D</label>
                </value>
                <value>
                    <fullName>LABEL_DATA_ONLY</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Astonous_SM__Label_Image_Type__c</fullName>
        <inlineHelpText>the default image type for all shipping</inlineHelpText>
        <label>Label Image Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Astonous_SM__Default_Carrier__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PDF</fullName>
                    <default>true</default>
                    <label>PDF</label>
                </value>
                <value>
                    <fullName>PNG</fullName>
                </value>
                <value>
                    <fullName>GIF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Astonous_SM__Label_Printing_Orientation__c</fullName>
        <label>Label Printing Orientation</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Astonous_SM__Default_Carrier__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TOP_EDGE_OF_TEXT_FIRST</fullName>
                    <default>true</default>
                    <label>TOP_EDGE_OF_TEXT_FIRST</label>
                </value>
                <value>
                    <fullName>BOTTOM_EDGE_OF_TEXT_FIRST</fullName>
                </value>
                <value>
                    <fullName>Portrait</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Astonous_SM__Label_Stock_Type__c</fullName>
        <label>Label Stock Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Astonous_SM__Default_Carrier__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PAPER_4X6</fullName>
                </value>
                <value>
                    <fullName>PAPER_4X6.75</fullName>
                </value>
                <value>
                    <fullName>PAPER_4X8</fullName>
                </value>
                <value>
                    <fullName>PAPER_4X9</fullName>
                </value>
                <value>
                    <fullName>PAPER_7X4.75</fullName>
                </value>
                <value>
                    <fullName>PAPER_8.5X11_BOTTOM_HALF_LABEL</fullName>
                </value>
                <value>
                    <fullName>PAPER_8.5X11_TOP_HALF_LABEL</fullName>
                </value>
                <value>
                    <fullName>PAPER_LETTER</fullName>
                </value>
                <value>
                    <fullName>STOCK_4X6</fullName>
                </value>
                <value>
                    <fullName>STOCK_4X6.75</fullName>
                </value>
                <value>
                    <fullName>STOCK_4X6.75_LEADING_DOC_TAB</fullName>
                </value>
                <value>
                    <fullName>STOCK_4X6.75_TRAILING_DOC_TAB</fullName>
                </value>
                <value>
                    <fullName>STOCK_4X8</fullName>
                </value>
                <value>
                    <fullName>STOCK_4X9</fullName>
                </value>
                <value>
                    <fullName>STOCK_4X9_LEADING_DOC_TAB</fullName>
                </value>
                <value>
                    <fullName>STOCK_4X9_TRAILING_DOC_TAB</fullName>
                </value>
                <value>
                    <fullName>4X6LABEL</fullName>
                </value>
                <value>
                    <fullName>4X6LABELL</fullName>
                </value>
                <value>
                    <fullName>6X4LABEL</fullName>
                </value>
                <value>
                    <fullName>4X6LABELP</fullName>
                </value>
                <value>
                    <fullName>4X6LABELP PAGE</fullName>
                </value>
                <value>
                    <fullName>A4</fullName>
                </value>
                <value>
                    <fullName>4X6</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Astonous_SM__Linear_Unit__c</fullName>
        <inlineHelpText>Default Dimensions linear unit for length, width and height of packets.</inlineHelpText>
        <label>Linear Unit</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Astonous_SM__Default_Carrier__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IN</fullName>
                    <default>true</default>
                    <label>IN</label>
                </value>
                <value>
                    <fullName>CM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Astonous_SM__Phone__c</fullName>
        <inlineHelpText>Default Sender Phone</inlineHelpText>
        <label>Phone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Pickup_Service_Category__c</fullName>
        <inlineHelpText>Required for pickup request, selected option will be default while creating new pickup request</inlineHelpText>
        <label>Pickup Service Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SAME_DAY</fullName>
                </value>
                <value>
                    <fullName>SAME_DAY_CITY</fullName>
                </value>
                <value>
                    <fullName>FEDEX_DISTANCE_DEFERRED</fullName>
                </value>
                <value>
                    <fullName>FEDEX_NEXT_DAY_AFTERNOON</fullName>
                </value>
                <value>
                    <fullName>FEDEX_NEXT_DAY_EARLY_MORNING</fullName>
                </value>
                <value>
                    <fullName>FEDEX_NEXT_DAY_END_OF_DAY</fullName>
                </value>
                <value>
                    <fullName>FEDEX_NEXT_DAY_FREIGHT</fullName>
                </value>
                <value>
                    <fullName>FEDEX_NEXT_DAY_MID_MORNING</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Astonous_SM__Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Service_Type__c</fullName>
        <inlineHelpText>Required for pickup request, selected option will be default while creating pickup request.</inlineHelpText>
        <label>Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Astonous_SM__Default_Carrier__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FDXC</fullName>
                    <label>FDXC(Cargo)</label>
                </value>
                <value>
                    <fullName>FDXE</fullName>
                    <label>FDXE (Express)</label>
                </value>
                <value>
                    <fullName>FDXG</fullName>
                    <label>FDXG (Ground)</label>
                </value>
                <value>
                    <fullName>FDCC</fullName>
                    <label>FDCC (Custom Critical)</label>
                </value>
                <value>
                    <fullName>FXFR</fullName>
                    <label>FXFR (Freight)</label>
                </value>
                <value>
                    <fullName>PriorityMailExpress</fullName>
                    <label>Priority Mail Express</label>
                </value>
                <value>
                    <fullName>PriorityMail</fullName>
                    <label>Priority Mail</label>
                </value>
                <value>
                    <fullName>ExpressMail</fullName>
                </value>
                <value>
                    <fullName>FirstClass</fullName>
                </value>
                <value>
                    <fullName>Returns</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>001</fullName>
                    <label>UPS Next Day Air</label>
                </value>
                <value>
                    <fullName>002</fullName>
                    <label>UPS 2nd Day Air</label>
                </value>
                <value>
                    <fullName>003</fullName>
                    <label>UPS Ground</label>
                </value>
                <value>
                    <fullName>004</fullName>
                    <label>UPS Ground, UPS Standard</label>
                </value>
                <value>
                    <fullName>007</fullName>
                    <label>UPS Worldwide Express</label>
                </value>
                <value>
                    <fullName>008</fullName>
                    <label>UPS Worldwide Expedited</label>
                </value>
                <value>
                    <fullName>011</fullName>
                    <label>UPS Standard</label>
                </value>
                <value>
                    <fullName>012</fullName>
                    <label>UPS 3 Day Select</label>
                </value>
                <value>
                    <fullName>013</fullName>
                    <label>UPS Next Day Air Saver</label>
                </value>
                <value>
                    <fullName>014</fullName>
                    <label>UPS Next Day Air Early</label>
                </value>
                <value>
                    <fullName>021</fullName>
                    <label>UPS Economy</label>
                </value>
                <value>
                    <fullName>031</fullName>
                    <label>UPS Basic</label>
                </value>
                <value>
                    <fullName>059</fullName>
                    <label>UPS 2nd Day Air A.M.</label>
                </value>
                <value>
                    <fullName>065</fullName>
                    <label>UPS Saver</label>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Priority Mail Address</fullName>
                    <isActive>false</isActive>
                    <label>Priority Mail Address</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Astonous_SM__Signature_Option__c</fullName>
        <label>Signature Option</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Astonous_SM__Default_Carrier__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SERVICE_DEFAULT</fullName>
                    <default>true</default>
                    <label>SERVICE_DEFAULT</label>
                </value>
                <value>
                    <fullName>ADULT</fullName>
                </value>
                <value>
                    <fullName>DIRECT</fullName>
                </value>
                <value>
                    <fullName>INDIRECT</fullName>
                </value>
                <value>
                    <fullName>NO_SIGNATURE_REQUIRED</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Astonous_SM__State__c</fullName>
        <label>State</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Street__c</fullName>
        <label>Street</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Weight_Unit__c</fullName>
        <label>Weight Unit</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Astonous_SM__Default_Carrier__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LB</fullName>
                    <default>true</default>
                    <label>LB</label>
                </value>
                <value>
                    <fullName>KG</fullName>
                </value>
                <value>
                    <fullName>LBS</fullName>
                    <label>Pounds</label>
                </value>
                <value>
                    <fullName>KGS</fullName>
                    <label>Kilograms</label>
                </value>
                <value>
                    <fullName>OZS</fullName>
                    <label>Ounces</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Shipping Preference</label>
    <listViews>
        <fullName>Astonous_SM__All</fullName>
        <columns>NAME</columns>
        <columns>Astonous_SM__Contact_Person_Name__c</columns>
        <columns>Astonous_SM__City__c</columns>
        <columns>Astonous_SM__Company__c</columns>
        <columns>Astonous_SM__Email__c</columns>
        <columns>Astonous_SM__Phone__c</columns>
        <columns>Astonous_SM__Postal_Code__c</columns>
        <columns>Astonous_SM__State__c</columns>
        <columns>Astonous_SM__Default__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Preference Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipping Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>